Fixed Firefox not displaying bug, fixed first load placeholder, fixed button overflow in mobile filters.

--- a/src/app/component/CategoryFilterOverlay/CategoryFilterOverlay.style.scss
+++ b/src/app/component/CategoryFilterOverlay/CategoryFilterOverlay.style.scss
@@ -147,9 +147,6 @@
     &-SeeResults.Button {
         margin: 2rem 1rem;
         width: calc(100% - 2rem);
-        position: absolute;
-        bottom: 1rem;
-        left: 0;
 
         @include after-mobile {
             display: none;
